--- a/src/styles/layout/_carousel.scss
+++ b/src/styles/layout/_carousel.scss
@@ -5,8 +5,57 @@
 }
 
 .carousel-item {
-  display: flex !important;
+  display: block;
   float: none !important;
-  width: auto !important;
+  // width: auto !important;
   margin-right: 0 !important;
+  padding: 25px;
+  box-shadow: 2px 10px 8px 10px #1b1b1b5d;
+  // position: relative;
+  // z-index: -1;
+}
+
+// .carousel,
+// .carousel-inner {
+//   position: relative;
+//   z-index: -2;
+// }
+
+.carousel-item :hover {
+  filter: blur(4px);
+}
+
+.inner-c {
+  display: none;
+  background: rgba(196, 196, 196, 0.4);
+  border-radius: 20px;
+  padding: 25px 10px;
+  height: 100%;
+  p {
+    font-size: 20px;
+  }
+  h3,
+  p {
+    text-align: center;
+  }
+}
+
+.house1bg {
+  width: 300px;
+  height: 300px;
+  background-image: url(../../src/assets/house1.png);
+  // position: relative;
+  // z-index: -1;
+}
+
+.house2bg {
+  width: 350px;
+  height: 350px;
+  background-image: url(../../src/assets/house2.png);
+}
+
+.house3bg {
+  width: 300px;
+  height: 300px;
+  background-image: url(../../src/assets/house3.png);
 }
