--- a/src/styles/layout/_carousel.scss
+++ b/src/styles/layout/_carousel.scss
@@ -1,61 +1,61 @@
 .carousel-inner {
+  height: 400px;
   display: flex !important;
   justify-content: center;
   align-items: center;
 }
 
 .carousel-item {
-  display: block;
-  float: none !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   // width: auto !important;
   margin-right: 0 !important;
-  padding: 25px;
   box-shadow: 2px 10px 8px 10px #1b1b1b5d;
-  // position: relative;
-  // z-index: -1;
-}
+  position: relative;
 
-// .carousel,
-// .carousel-inner {
-//   position: relative;
-//   z-index: -2;
-// }
+  .inner-c {
+    height: 0;
+    width: calc(100% - 50px);
+    overflow: hidden;
+    background: rgba(196, 196, 196, 0.726);
+    border-radius: 20px;
+    padding: 0px;
+    transition: all 1s ease-in-out;
 
-.carousel-item :hover {
-  filter: blur(4px);
-}
-
-.inner-c {
-  display: none;
-  background: rgba(196, 196, 196, 0.4);
-  border-radius: 20px;
-  padding: 25px 10px;
-  height: 100%;
-  p {
-    font-size: 20px;
+    p {
+      font-size: 20px;
+    }
+    h3,
+    p {
+      text-align: center;
+    }
   }
-  h3,
-  p {
-    text-align: center;
+
+  &:hover .inner-c {
+    height: calc(100% - 50px);
+
+    padding: 25px 10px;
   }
 }
 
 .house1bg {
   width: 300px;
   height: 300px;
-  background-image: url(../../src/assets/house1.png);
-  // position: relative;
-  // z-index: -1;
+  background-image: url(/build/assets/house1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .house2bg {
   width: 350px;
   height: 350px;
-  background-image: url(../../src/assets/house2.png);
+  background-image: url(/build/assets/house2.png);
 }
 
 .house3bg {
   width: 300px;
   height: 300px;
-  background-image: url(../../src/assets/house3.png);
+  background-image: url(/build/assets/house3.png);
 }
