--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -1,14 +1,8 @@
-// .big-container,
-// .grey-bg {
-//   position: relative;
-//   z-index: -5;
-// }
-
 .sec1 {
   padding-top: 50px;
   padding-left: 80px;
   padding-right: 80px;
-  background-image: url("../../src/assets/bg1.png");
+  background-image: url("/build/assets/bg1.png");
   background-repeat: round;
 }
 
@@ -128,7 +122,7 @@
   position: relative;
   :hover {
     transform: scale(1.1);
-    transition: 2s;
+    transition: 1s ease-in-out;
   }
 }
 
@@ -139,21 +133,19 @@
 }
 
 .bg2 {
-  background-image: url("../../src/assets/bg2.png");
+  background-image: url("../assets/bg2.png");
   background-repeat: round;
   padding-bottom: 115px;
   padding-top: 100px;
-  // position: relative;
-  // z-index: -4;
 }
 
 .bg3 {
-  background-image: url("../../src/assets/bg3.png");
+  background-image: url("../assets/bg3.png");
   background-repeat: round;
 }
 
 .bg4 {
-  background-image: url("../../src/assets/keysBackground.png");
+  background-image: url("../assets/keysBackground.png");
   background-repeat: round;
   display: flex;
   justify-content: center;
@@ -170,18 +162,11 @@
 
 .bg5 {
   position: relative;
-  background-image: url("../../src/assets/maps.png");
+  background-image: url("../assets/maps.png");
   background-repeat: round;
   margin-top: 40px;
   padding-top: 60px;
   text-align: center;
-}
-
-.location :hover {
-  img {
-    width: 100px;
-    transition: 1s ease-out;
-  }
 }
 
 .py-50 {
@@ -266,13 +251,3 @@
 .space-between {
   justify-content: space-between;
 }
-
-// .size300x300 {
-//   width: 300px;
-//   height: 300px;
-// }
-
-// .size350x350 {
-//   width: 350px;
-//   height: 350px;
-// }
