--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -1,8 +1,12 @@
+.grey-bg {
+  width: 100%;
+  overflow-x: hidden;
+}
 .sec1 {
   padding-top: 50px;
   padding-left: 80px;
   padding-right: 80px;
-  background-image: url("/build/assets/bg1.png");
+  background-image: url("../assets/bg1.png");
   background-repeat: round;
 }
 
@@ -15,6 +19,17 @@
 
 .headline {
   width: 38%;
+}
+
+nav {
+  .d-flex {
+    a:hover {
+      cursor: pointer;
+      color: #e5d5d5;
+      border-bottom: 2px solid #e5d5d5;
+      // transition: 1s ease-in-out;
+    }
+  }
 }
 
 .catalog-btn {
@@ -33,8 +48,8 @@
 }
 
 .catalog-btn:hover {
-  padding: 4px 25px;
-  transition: 5ms;
+  transition: 1s ease-in-out;
+  transform: scale(1.1);
 }
 
 .aboutus-sec {
@@ -151,17 +166,19 @@
   justify-content: center;
 
   img {
-    margin-right: 160px;
+    margin-right: 100px;
   }
 
   h2 {
     width: 30%;
     align-self: center;
+    line-height: 90px;
   }
 }
 
 .bg5 {
   position: relative;
+  height: 440px;
   background-image: url("../assets/maps.png");
   background-repeat: round;
   margin-top: 40px;
@@ -174,8 +191,8 @@
   padding-bottom: 50px;
 }
 
-.pr-50 {
-  padding-right: 50px;
+.mr-50 {
+  margin-right: 50px;
 }
 
 .pb-100 {
@@ -222,6 +239,10 @@
 
 .mb-40 {
   margin-bottom: 40px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
 }
 
 .ml-75 {
