--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,7 @@
 @import "basic/basic-style";
 @import "basic/text-style";
 @import "basic/colors";
+@import "layout/media";
 @import "layout/layout";
 @import "layout/carousel";
+@import "layout/media";
