--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -288,3 +288,10 @@ nav {
 .space-between {
   justify-content: space-between;
 }
+
+// .cut-text {
+//   display: inline-block;
+//   white-space: nowrap;
+//   overflow: hidden !important;
+//   text-overflow: ellipsis;
+// }
