--- a/src/styles/layout/_media.scss
+++ b/src/styles/layout/_media.scss
@@ -186,6 +186,12 @@
 }
 
 @media screen and (max-width: 800px) {
+  p {
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.3px;
+  }
+
   .nav {
     display: none !important;
   }
@@ -202,11 +208,15 @@
   .hero-sec {
     display: block;
   }
-  .button {
+
+  // .headline {
+  //   .mr-50 {
+  //     margin-right: 0;
+  //   }
+  // }
+
+  .catalog-btn {
     margin-top: 50px;
-  }
-  button {
-    margin: auto;
   }
 
   .yellow-circle {
@@ -214,5 +224,41 @@
     padding-bottom: 15px;
     padding-right: 5px;
     padding-left: 5px;
+  }
+
+  .button {
+    text-align: center;
+  }
+
+  .aboutus-sec {
+    div {
+      padding: 30px;
+    }
+  }
+}
+
+@media screen and (max-width: 560px) {
+  h1 {
+    font-size: 35px;
+  }
+
+  h2 {
+    font-size: 23px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 12px;
+    line-height: 25px;
+    letter-spacing: 0.2px;
+  }
+
+  .catalog-btn {
+    a {
+      font-size: 25px;
+    }
   }
 }
