--- a/src/styles/layout/_carousel.scss
+++ b/src/styles/layout/_carousel.scss
@@ -7,12 +7,12 @@
 }
 
 .carousel-control-prev-icon {
-  background-image: url("../../../build/assets/previous.png") !important;
+  background-image: url("../assets/previous.png") !important;
   height: 5rem !important;
 }
 
 .carousel-control-next-icon {
-  background-image: url("../../../build/assets/next.png") !important;
+  background-image: url("../assets/next.png") !important;
   height: 5rem !important;
 }
 
@@ -25,7 +25,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  // width: auto !important;
   margin-right: 0 !important;
   box-shadow: 2px 10px 8px 10px #1b1b1b5d;
   position: relative;
@@ -59,7 +58,7 @@
 .house1bg {
   width: 300px;
   height: 300px;
-  background-image: url("../../../build/assets/house1.png");
+  background-image: url("../assets/house1.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -68,11 +67,11 @@
 .house2bg {
   width: 350px;
   height: 350px;
-  background-image: url("../../../build/assets//house2.png");
+  background-image: url("../assets//house2.png");
 }
 
 .house3bg {
   width: 300px;
   height: 300px;
-  background-image: url("../../../build/assets//house3.png");
+  background-image: url("../assets//house3.png");
 }
