--- a/src/styles/basic/_basic-style.scss
+++ b/src/styles/basic/_basic-style.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Reem Kufi", sans-serif;
   margin: 0;
@@ -54,7 +58,7 @@ h6 {
   font-size: 20px;
   font-weight: normal;
   margin: 0;
-  letter-spacing: 13px;
+  letter-spacing: 4px;
   word-spacing: 8px;
   text-transform: uppercase;
 }
