--- a/src/styles/layout/_carousel.scss
+++ b/src/styles/layout/_carousel.scss
@@ -42,6 +42,7 @@
     p {
       font-size: 20px;
     }
+    
     h3,
     p {
       text-align: center;
@@ -60,7 +61,7 @@
   height: 300px;
   background-image: url("../assets/house1.png");
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: round;
   background-size: cover;
 }
 
@@ -68,10 +69,14 @@
   width: 350px;
   height: 350px;
   background-image: url("../assets//house2.png");
-}
+  background-position: center;
+  background-repeat: round;
+  background-size: cover;}
 
 .house3bg {
   width: 300px;
   height: 300px;
   background-image: url("../assets//house3.png");
-}
+  background-position: center;
+  background-repeat: round;
+  background-size: cover;}
