--- a/src/styles/layout/_media.scss
+++ b/src/styles/layout/_media.scss
@@ -126,12 +126,13 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .bg4 h2 {
-    width: 40%;
-  }
-
-  .bg4 img {
-    margin-right: 60px;
+  .bg4 {
+    h2 {
+      width: 40%;
+    }
+    img {
+      margin-right: 60px;
+    }
   }
 
   nav {
@@ -200,6 +201,22 @@
       height: 488px;
     }
   }
+
+  .yellow-circle {
+    &:nth-child(2) {
+      h2 {
+        margin-bottom: -9px;
+        margin-top: -4px;
+      }
+    }
+
+    &:nth-child(4) {
+      p {
+        margin-top: 7px;
+        margin-bottom: 4px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -214,6 +231,18 @@
   .bg4 {
     img {
       margin-right: 35px;
+    }
+  }
+
+  .yellow-rectangle {
+    ul {
+      li {
+        margin-bottom: 0;
+        a {
+          font-size: 14px;
+          letter-spacing: 0.5px;
+        }
+      }
     }
   }
 }
@@ -233,6 +262,11 @@
   h3 {
     font-size: 30px;
     letter-spacing: 11px;
+  }
+
+  h6 {
+    font-size: 17px;
+    letter-spacing: 3px;
   }
 
   p {
@@ -259,7 +293,11 @@
   }
 
   .headline {
-    width: 100%;
+    width: 68%;
+  }
+
+  .hero-sec {
+    padding-top: 150px;
   }
 
   .catalog-btn {
@@ -325,8 +363,13 @@
 
   h2 {
     font-size: 28px;
-    line-height: 65px !important;
+    line-height: 45px !important;
   }
+
+  .hero-sec {
+    padding-top: 100px;
+  }
+
   .sec1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -336,6 +379,51 @@
   .aboutus-sec {
     margin-left: 15px;
     margin-right: 15px;
+  }
+
+  .bg4,
+  h2 {
+    line-height: 60px !important;
+  }
+
+  .row,
+  .mb-40 {
+    margin-bottom: 0;
+  }
+
+  .yellow-circle {
+    &:nth-child(2) {
+      p {
+        margin-bottom: 5px;
+      }
+      h2 {
+        margin-bottom: 2px;
+      }
+    }
+  }
+
+  .yellow-rectangle {
+    width: 90%;
+    margin-bottom: 30px;
+  }
+
+  .icon-box {
+    img {
+      height: 45px;
+    }
+  }
+
+  .location {
+    img {
+      width: 60px;
+    }
+  }
+
+  .footer-logo {
+    left: 50%;
+    transform: translateX(-50%);
+    top: 143px;
+    width: 130px;
   }
 }
 
@@ -353,11 +441,16 @@
     letter-spacing: 10px;
   }
 
+  h6 {
+    font-size: 14px;
+  }
+
   p {
     font-size: 12px;
     line-height: 25px;
     letter-spacing: 0.2px;
   }
+
   .sec1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -367,6 +460,48 @@
   .catalog-btn {
     a {
       font-size: 25px;
+    }
+  }
+
+  .bg2 {
+    padding-bottom: 100px;
+    padding-top: 80px;
+  }
+
+  .bg3 {
+    margin-bottom: 50px;
+  }
+
+  .bg4 {
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-bottom: 50px;
+    h2 {
+      width: 90%;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    img {
+      margin-right: 0;
+    }
+  }
+
+  .carousel-inner {
+    height: 265px;
+  }
+
+  .carousel-item {
+    height: 220px;
+    width: 220px;
+  }
+
+  .yellow-rectangle {
+    ul {
+      li {
+        a {
+          font-size: 12px;
+        }
+      }
     }
   }
 }
