--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -16,7 +16,7 @@
   padding-top: 200px;
   padding-bottom: 100px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .headline {
@@ -37,8 +37,28 @@ nav {
   }
 }
 
-.burger-meni {
+.burger-meni,
+.btn {
   display: none;
+}
+
+.open-menu {
+  height: 100%;
+  width: 90%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color: rgba(230, 213, 213, 89%);
+  padding-top: 100px;
+  padding-left: 50px;
+  h2 {
+    color: #322b2b;
+    margin-bottom: 70px;
+  }
+}
+
+.btn {
+  padding: 0;
 }
 
 .catalog-btn {
