add slide menu for mobile version

--- a/src/styles/layout/_media.scss
+++ b/src/styles/layout/_media.scss
@@ -452,6 +452,12 @@
     letter-spacing: 0.2px;
   }
 
+  nav {
+    .logo {
+      width: 40%;
+    }
+  }
+
   .sec1 {
     padding-left: 10px;
     padding-right: 10px;
