--- a/src/styles/layout/_media.scss
+++ b/src/styles/layout/_media.scss
@@ -23,6 +23,10 @@
     margin-right: 80px;
     margin-left: 80px;
   }
+
+  .pos-f-t {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1500px) {
@@ -60,13 +64,17 @@
   }
 
   .yellow-circle {
-    padding: 12px 12px;
+    padding: 12px 15px;
     width: 140px;
     height: 140px;
 
+    p {
+      font-size: 14px;
+    }
+
     .pb-10,
     .pb-15 {
-      padding-bottom: 3px;
+      padding-bottom: 0;
     }
 
     h2 {
@@ -106,7 +114,6 @@
     }
 
     &:nth-child(4) {
-      padding: 8px;
       img {
         height: 52px;
       }
@@ -209,13 +216,6 @@
         margin-top: -4px;
       }
     }
-
-    &:nth-child(4) {
-      p {
-        margin-top: 7px;
-        margin-bottom: 4px;
-      }
-    }
   }
 }
 
@@ -282,7 +282,10 @@
   .burger-meni,
   .btn {
     display: inline;
-    // width: 9%;
+  }
+
+  .pos-f-t {
+    display: block;
   }
 
   .set-icon {
@@ -319,40 +322,34 @@
       font-size: 46px;
     }
 
-    &:nth-child(1) {
-      margin-right: 10px;
-    }
-
-    &:nth-child(2) {
-      margin-right: 10px;
-    }
-
+    &:nth-child(1),
+    &:nth-child(2),
     &:nth-child(3) {
       margin-right: 10px;
     }
 
     &:nth-child(4) {
       margin-right: 10px;
+      p {
+        margin-top: 5px;
+      }
     }
 
-    // &:nth-child(5) {
-    // }
-  }
-
-  .button {
-    text-align: center;
-  }
-
-  .aboutus-sec {
-    div {
-      padding: 30px 15px;
+    .button {
+      text-align: center;
     }
-  }
 
-  .bg4 {
-    img {
-      width: 48%;
-      height: auto;
+    .aboutus-sec {
+      div {
+        padding: 30px 15px;
+      }
+    }
+
+    .bg4 {
+      img {
+        width: 48%;
+        height: auto;
+      }
     }
   }
 }
@@ -364,11 +361,6 @@
 
   h2 {
     font-size: 28px;
-    line-height: 45px !important;
-  }
-
-  .hero-sec {
-    padding-top: 100px;
   }
 
   .sec1 {
@@ -377,14 +369,34 @@
     padding-top: 25px;
   }
 
+  .catalog-btn {
+    margin-top: 100px;
+  }
+
   .aboutus-sec {
     margin-left: 15px;
     margin-right: 15px;
   }
 
-  .bg4,
-  h2 {
-    line-height: 45px !important;
+  .info-sec {
+    h3 {
+      font-weight: bold;
+    }
+  }
+
+  .bg4 {
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-bottom: 50px;
+    h2 {
+      width: 90%;
+      text-align: center;
+      margin-bottom: 50px;
+      font-weight: bold;
+    }
+    img {
+      margin-right: 0;
+    }
   }
 
   .row,
@@ -429,14 +441,6 @@
 }
 
 @media screen and (max-width: 560px) {
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
-    font-size: 23px;
-  }
-
   h3 {
     font-size: 20px;
     letter-spacing: 10px;
@@ -477,20 +481,6 @@
 
   .bg3 {
     margin-bottom: 50px;
-  }
-
-  .bg4 {
-    flex-direction: column-reverse;
-    align-items: center;
-    margin-bottom: 50px;
-    h2 {
-      width: 90%;
-      text-align: center;
-      margin-bottom: 15px;
-    }
-    img {
-      margin-right: 0;
-    }
   }
 
   .carousel-inner {
